# petl_django

./: pyproject.toml  setup.py
petl_django/: __init__.py  django_view.py
