[build-system]
requires = [ "flit-core >=3.4,<4" ]
build-backend = "flit_core.buildapi"

[project]
name = "chul-petl_django"
description = "A petl view class for Django model data (fork)."
requires-python = ">=3.10"
license = "MIT"
authors = [
	{ name = "Paul Gower", email = "p.gower@gmail.com" },
    { name = "Christian Ullrich", email = "chris@chrullrich.net" },
]
dependencies = [
	"petl",
	"Django",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/chrullrich/petl_django"

[tool.flit.module]
name = "petl_django"
